# vfs-kprobes

./: .gitignore  Cargo.toml  README.md
.vim/: coc-settings.json
ebpf-monitor/: Cargo.toml
ebpf-monitor-common/: Cargo.toml
ebpf-monitor-common/src/: lib.rs
ebpf-monitor-ebpf/: Cargo.toml
ebpf-monitor-ebpf/src/: main.rs  mod_file.rs
ebpf-monitor/src/: main.rs
vfs-kprobes/: Cargo.toml
vfs-kprobes-common/: Cargo.toml
vfs-kprobes-ebpf/: Cargo.toml
vfs-kprobes-ebpf/src/: main.rs  vmlinux.rs
vfs-kprobes/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
